fix: bytecode cache in JAR now